--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 out/
 *.iws
 
+# other files #
+build
+
 # compiled source #
-###################
 *.com
 *.class
 *.dll
@@ -12,7 +14,6 @@ out/
 *.so
 
 # Packages #
-############
 # it's better to unpack these files and commit the raw source
 # git has its own built in compression methods
 *.7z
@@ -25,13 +26,11 @@ out/
 *.zip
 
 # Logs and databases #
-######################
 *.log
 *.sql
 *.sqlite
 
 # OS generated files #
-######################
 .DS_Store
 .DS_Store?
 ._*
