--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ out/
 .idea
 
 # other files #
-build
+/build/
 
 # compiled source #
 *.com
@@ -39,3 +39,18 @@ build
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+## gradle files ##
+.gradle
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+gradle/wrapper/gradle-wrapper.properties
