--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@ repositories {
 	mavenCentral()
 }
 
+apply plugin: 'java'
+apply plugin: 'idea'
+
 dependencies {
-	testCompile group: 'junit', name: 'junit', version: '4.+'
+	testCompile 'junit:junit:4.12'
 }
+
 task wrapper(type: Wrapper) {
     gradleVersion = '3.1'
 }
-
-apply plugin: 'java'
-apply plugin: 'idea'
