--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ gradle-app.setting
 
 # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 #gradle/wrapper/gradle-wrapper.properties
+
+# intellij project files
+*.iml
+*.ipr
