--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 
 dependencies {
+	compile 'com.google.guava:guava:19.0'
 	testCompile 'junit:junit:4.12'
 }
 
