--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,10 @@ apply plugin: 'java'
 apply plugin: 'idea'
 
 dependencies {
+	compile 'org.mongodb:mongodb-driver:3.3.0'
 	testCompile 'junit:junit:4.12'
 }
+
 
 task wrapper(type: Wrapper) {
     gradleVersion = '3.1'
